--- a/web/CSS/index.css
+++ b/web/CSS/index.css
@@ -5,6 +5,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    background-repeat: no-repeat;
+    background-image: url(/web/images/BC-image.jpg);
+    background-size: cover;
+}
+
 :root {
     /*proměnný pro barvy*/
 }
