--- a/web/CSS/index.css
+++ b/web/CSS/index.css
@@ -52,6 +52,15 @@ main {
     z-index: 1;
 
 }
+
+#hlNapisPico input {
+    color: wheat;
+    padding: 0;
+}
+
+#hlNapisPico input:active {
+    border: 1px red;
+}
 /*to jsem přemístil přímo do h1čky*/
 #hlVyhledavacPolic {
     /*asi tam nebude vidět (když je to skrytý)*/
@@ -62,7 +71,8 @@ main {
 }
 
 /*když to je přes "vh" a "vw" tak je to sice responzivní, ale
-když to okno bude moc malý tak se to pak sere.*/
+když to okno bude moc malý tak se to pak sere -*/
+/* to zas můžem přizpůsobit pro malé monitory, přes tu chujovinu, kdy pro to nastavíme třeba, ať se to dává pod sebe, zároveň jsem ale nezamýšlel, jak přesně tam do toho budou sedět ty chujoviny no*/ 
 /*obecně bych nenastavoval výšku páč ta se dodělá podle toho co je uvnitř*/
 .nejhlavnejsipanel {
     width: 50%;
@@ -83,7 +93,7 @@ když to okno bude moc malý tak se to pak sere.*/
 }
 /*ted to vypadá jak novej design microsoft loga*/
 .mainbtn {
-    margin: 1rem;
+    margin: 2.4rem;
     aspect-ratio: 1/1;
     border-radius: 50px;
     background-image: linear-gradient(120deg, rgb(73, 188, 255), rgb(0, 102, 255));
