--- a/web/CSS/index.css
+++ b/web/CSS/index.css
@@ -13,6 +13,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    min-height: 100vh;
 }
 
 :root {
@@ -75,15 +76,14 @@ když to okno bude moc malý tak se to pak sere -*/
 /* to zas můžem přizpůsobit pro malé monitory, přes tu chujovinu, kdy pro to nastavíme třeba, ať se to dává pod sebe, zároveň jsem ale nezamýšlel, jak přesně tam do toho budou sedět ty chujoviny no*/ 
 /*obecně bych nenastavoval výšku páč ta se dodělá podle toho co je uvnitř*/
 .nejhlavnejsipanel {
-    width: 50%;
+    width: 85%;
+    min-height: 85vh;
     min-width: 280px;
     background-color: rgba(0, 0, 0, 0.526);
     backdrop-filter: blur(1px) saturate(250%);
     -webkit-backdrop-filter: blur(1px) saturate(250%);
     border: 1px solid rgba(255, 255, 255, 0.125);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
     border-radius: 50px;
 }
 /*přepsal jsem to na div s tou classou*/
@@ -93,9 +93,9 @@ když to okno bude moc malý tak se to pak sere -*/
 }
 /*ted to vypadá jak novej design microsoft loga*/
 .mainbtn {
-    margin: 2.4rem;
-    aspect-ratio: 1/1;
+    margin: 1rem;
     border-radius: 50px;
+    min-height: 200px;
     background-image: linear-gradient(120deg, rgb(73, 188, 255), rgb(0, 102, 255));
 }
 
