ted je to trochu hnusny a rozbitý
 ale to jen dočasně

--- a/web/CSS/AI.css
+++ b/web/CSS/AI.css
@@ -19,3 +19,11 @@ body {
     height: 100%;
     background-color: rgba(146, 192, 243, 0.588);
 }
+
+.grafika {
+    display: grid;
+}
+
+.grafika > img {
+    
+}
