--- a/web/CSS/AI.css
+++ b/web/CSS/AI.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: rgb(255, 255, 255);
-}
+    body {
+        background-image: url("https://cdn.discordapp.com/attachments/1050752220628521000/1168170778366316585/pexels-philippe-donn-1169754.jpg?ex=6550cad1&is=653e55d1&hm=53441ed86bc1c5e0ebd8232db6e0b71e30e36e836136bf4f1c96ec5ce4a1844a&");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        min-height: 100vh;
+    }
 
 .input {
     position: absolute;
@@ -17,13 +22,62 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(146, 192, 243, 0.588);
+    background-color: rgba(113, 163, 221, 0.588);
+}
+
+.input > input, .input > button {
+    margin-block: 2rem;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    color: #ffffff;
+}
+
+.input > button {
+    padding: 1rem;
+    aspect-ratio: 2/1;
+    font-size: 2rem;
+}
+
+.input > input {
+    padding: 1rem;
+    font-size: 2rem;
+    width: 60%;
+    max-width: 285px;
 }
 
 .grafika {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .grafika > img {
-    
+    max-width: 5rem;
+    min-width: 30px;
+    width: 3%;
+}
+
+.btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-block-start: 7rem;
+}
+
+.btn {
+    /*margin-inline: 2rem;*/
+    aspect-ratio: 1/1;
+    width: 15%;
+    max-width: 8.5rem;
+    min-width: 85px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    color: #ffffff;
+    font-size: 2rem;
 }
