--- a/web/CSS/AI.css
+++ b/web/CSS/AI.css
@@ -22,7 +22,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(113, 163, 221, 0.588);
+    background-color: rgba(181, 184, 188, 0.588);
 }
 
 .input > input, .input > button {
@@ -51,6 +51,14 @@
 .grafika {
     display: flex;
     flex-wrap: wrap;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 1rem;
+    margin: 2rem;
 }
 
 .grafika > img {
