--- a/web/CSS/AI.css
+++ b/web/CSS/AI.css
@@ -88,4 +88,26 @@
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     color: #ffffff;
     font-size: 2rem;
+    transition: all 0.8s;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.579);
+}
+
+.btn:active {
+    background: rgba( 255, 255, 255, 0.25 );
+}
+
+.consola {
+    background-color: #000000;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 10px;
+    border:1px solid #ffffff;
+    outline: 5px solid black;
+    color: green;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
 }
